--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StockPalApp"
+        android:name=".StockPalApp"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
